; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/extr_clk-fixed-factor.c_clk_unregister_fixed_factor.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/extr_clk-fixed-factor.c_clk_unregister_fixed_factor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk = type { i32 }
%struct.clk_hw = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @clk_unregister_fixed_factor(%struct.clk* %0) #0 {
  %2 = alloca %struct.clk*, align 8
  %3 = alloca %struct.clk_hw*, align 8
  store %struct.clk* %0, %struct.clk** %2, align 8
  %4 = load %struct.clk*, %struct.clk** %2, align 8
  %5 = call %struct.clk_hw* @__clk_get_hw(%struct.clk* %4)
  store %struct.clk_hw* %5, %struct.clk_hw** %3, align 8
  %6 = load %struct.clk_hw*, %struct.clk_hw** %3, align 8
  %7 = icmp ne %struct.clk_hw* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %15

9:                                                ; preds = %1
  %10 = load %struct.clk*, %struct.clk** %2, align 8
  %11 = call i32 @clk_unregister(%struct.clk* %10)
  %12 = load %struct.clk_hw*, %struct.clk_hw** %3, align 8
  %13 = call i32 @to_clk_fixed_factor(%struct.clk_hw* %12)
  %14 = call i32 @kfree(i32 %13)
  br label %15

15:                                               ; preds = %9, %8
  ret void
}

declare dso_local %struct.clk_hw* @__clk_get_hw(%struct.clk*) #1

declare dso_local i32 @clk_unregister(%struct.clk*) #1

declare dso_local i32 @kfree(i32) #1

declare dso_local i32 @to_clk_fixed_factor(%struct.clk_hw*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
